// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component test renders as expected 1`] = `
<TouchableOpacity
  activeOpacity={0.5}
>
  <Component
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "transparent",
        "borderColor": "white",
        "borderRadius": 4,
        "borderWidth": 2,
        "height": 52,
        "justifyContent": "center",
        "width": 320,
      }
    }
  >
    <Component
      style={
        Object {
          "color": "white",
          "fontSize": 14,
        }
      }
    />
  </Component>
</TouchableOpacity>
`;

exports[`Button component test renders as expected 2`] = `
<TouchableOpacity
  activeOpacity={0.5}
>
  <Component
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "transparent",
        "borderColor": "white",
        "borderRadius": 4,
        "borderWidth": 2,
        "height": 52,
        "justifyContent": "center",
        "width": 320,
      }
    }
  >
    <Component
      style={
        Object {
          "color": "white",
          "fontSize": 14,
        }
      }
    />
  </Component>
</TouchableOpacity>
`;

exports[`Button component test simulate onPress 1`] = `
<TouchableOpacity
  activeOpacity={0.5}
  onPress={[Function]}
>
  <Component
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "transparent",
        "borderColor": "white",
        "borderRadius": 4,
        "borderWidth": 2,
        "height": 52,
        "justifyContent": "center",
        "width": 320,
      }
    }
  >
    <Component
      style={
        Object {
          "color": "white",
          "fontSize": 14,
        }
      }
    />
  </Component>
</TouchableOpacity>
`;

exports[`Button renders without crashing 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "transparent",
        "borderColor": "white",
        "borderRadius": 4,
        "borderWidth": 2,
        "height": 52,
        "justifyContent": "center",
        "width": 320,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "white",
          "fontSize": 14,
        }
      }
    />
  </View>
</View>
`;
